--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "shimmer-effects-react": "^1.0.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
