--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.0",
+    "react-window": "^1.8.11",
     "shimmer-effects-react": "^1.0.4",
     "zustand": "^5.0.3"
   },
@@ -27,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-window": "^1.8.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
