--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@tanstack/react-query": "^5.66.3",
+    "ag-grid-react": "^33.1.1",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "next": "15.1.7",
