--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "@client/*": ["app/_client/*"],
       "@components/*": ["app/_components/*"],
       "@game": ["app/game"],
+      "@helpers": ["app/_helpers"],
       "@store": ["app/_store"],
       "@styles/*" : ["app/_styles/*"],
       "@types": ["app/_types"],
