--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test:jest": "yarn run jest",
-    "test:storybook": "npx chromatic --project-token=chpt_b1970d946546b69"
+    "test:storybook": "npx chromatic --project-token=chpt_b1970d946546b69 --force-rebuild"
   },
   "dependencies": {
     "@balldontlie/sdk": "^1.2.2",
@@ -31,6 +31,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@alexgorbatchev/storybook-addon-jotai": "^3.0.6",
     "@chromatic-com/storybook": "^3",
     "@eslint/eslintrc": "^3",
     "@storybook/addon-essentials": "^8.6.12",
@@ -62,10 +63,12 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
+    "jotai": "^2.12.2",
     "playwright": "^1.51.1",
     "postcss": "^8",
     "prettier": "^3.5.1",
     "storybook": "^8.6.12",
+    "storybook-addon-module-mock": "^1.3.5",
     "strip-ansi": "^7.1.0",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.3.1",
