--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,6 @@
       "@/queryClient": ["client/queryClient"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/_store/nbaEverythingAtoms"],
   "exclude": ["node_modules"]
 }
