📝 initial storybook changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
       "@/components/*": ["app/_components/*"],
       "@/game": ["app/game"],
       "@/helpers": ["app/_helpers"],
+      "@/hooks": ["app/_hooks"],
       "@/store": ["app/_store"],
       "@/styles/*": ["app/_styles/*"],
       "@/types": ["app/_types"],
